--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,17 +15,31 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:gravity="center">
+		<GridLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:columnCount="1">
+			<com.google.android.material.textfield.TextInputEditText
+					android:layout_width="match_parent"
+					android:layout_height="64dp"
+					android:singleLine="true"
+					android:maxLines="1"
+					android:layout_marginTop="64dp" />
+			<androidx.constraintlayout.widget.ConstraintLayout
+					android:layout_gravity="fill">
 
-		<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="Foxe" />
+				<ListView
+						android:id="@+id/test_list_view"
+						android:layout_width="0dp"
+						android:layout_height="0dp"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent" />
 
-		<Button
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text=":)">
+			</androidx.constraintlayout.widget.ConstraintLayout>
 
-		</Button>
+		</GridLayout>
+
 	</LinearLayout>
 </RelativeLayout>
