--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,17 +19,38 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:columnCount="1">
+
+			<ImageView
+					android:id="@+id/send_icon"
+					android:layout_width="32dip"
+					android:layout_height="32dip"
+					android:layout_row="0"
+					android:layout_column="0"
+					android:gravity="center_horizontal"
+					android:padding="0dip"
+					android:scaleType="centerCrop"
+					android:src="@drawable/search_icon"
+					android:layout_marginTop="64dp"/>
+
 			<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/app_search"
 					android:layout_width="match_parent"
 					android:layout_height="64dp"
 					android:singleLine="true"
 					android:maxLines="1"
-					android:layout_marginTop="64dp" />
+					android:layout_marginTop="64dp"
+					android:background="@null"
+					android:layout_row="0"
+					android:layout_column="0"
+					android:focusedByDefault="true"/>
 			<androidx.constraintlayout.widget.ConstraintLayout
-					android:layout_gravity="fill">
+					android:layout_gravity="fill"
+					android:layout_row="1"
+					android:layout_column="0"
+					android:layout_columnSpan="1">
 
 				<ListView
-						android:id="@+id/test_list_view"
+						android:id="@+id/app_list_view"
 						android:layout_width="0dp"
 						android:layout_height="0dp"
 						app:layout_constraintBottom_toBottomOf="parent"
