--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
+		android:columnCount="1"
 		android:fillViewport="true"
 		android:gravity="fill"
 		android:padding="16dp"
@@ -12,55 +13,47 @@
 		tools:context=".MainActivity">
 
 	<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:gravity="center">
-		<GridLayout
+			android:layout_gravity="fill"
+			android:layout_marginTop="64dp"
+			android:orientation="horizontal">
+
+		<ImageView
+				android:id="@+id/send_icon"
+				android:layout_width="40dp"
+				android:layout_height="64dp"
+				android:gravity="center_horizontal"
+				android:paddingVertical="12dp"
+				android:paddingHorizontal="4dp"
+
+				android:scaleType="fitCenter"
+				android:src="@drawable/search_icon" />
+
+		<com.google.android.material.textfield.TextInputEditText
+				android:id="@+id/app_search"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:columnCount="1">
-
-			<ImageView
-					android:id="@+id/send_icon"
-					android:layout_width="32dip"
-					android:layout_height="32dip"
-					android:layout_row="0"
-					android:layout_column="0"
-					android:gravity="center_horizontal"
-					android:padding="0dip"
-					android:scaleType="centerCrop"
-					android:src="@drawable/search_icon"
-					android:layout_marginTop="64dp"/>
-
-			<com.google.android.material.textfield.TextInputEditText
-					android:id="@+id/app_search"
-					android:layout_width="match_parent"
-					android:layout_height="64dp"
-					android:singleLine="true"
-					android:maxLines="1"
-					android:layout_marginTop="64dp"
-					android:background="@null"
-					android:layout_row="0"
-					android:layout_column="0"
-					android:focusedByDefault="true"/>
-			<androidx.constraintlayout.widget.ConstraintLayout
-					android:layout_gravity="fill"
-					android:layout_row="1"
-					android:layout_column="0"
-					android:layout_columnSpan="1">
-
-				<ListView
-						android:id="@+id/app_list_view"
-						android:layout_width="0dp"
-						android:layout_height="0dp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toTopOf="parent" />
-
-			</androidx.constraintlayout.widget.ConstraintLayout>
-
-		</GridLayout>
-
+				android:layout_height="64dp"
+				android:background="@null"
+				android:focusedByDefault="true"
+				android:gravity="center_vertical"
+				android:maxLines="1"
+				android:singleLine="true" />
 	</LinearLayout>
-</RelativeLayout>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_row="1"
+			android:layout_column="0"
+			android:layout_columnSpan="1"
+			android:layout_gravity="fill">
+
+		<ListView
+				android:id="@+id/app_list_view"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
+</GridLayout>
