--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,8 @@
 				android:id="@+id/app_list_view"
 				android:layout_width="0dp"
 				android:layout_height="0dp"
+				android:divider="#00000000"
+				android:scrollbarSize="0dp"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
