--- a/NiceAppSearch/app/src/main/res/layout/activity_main.xml
+++ b/NiceAppSearch/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/main"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:columnCount="1"
@@ -10,35 +11,52 @@
 		android:gravity="fill"
 		android:padding="16dp"
 		android:theme="@style/Theme.Transparent"
-		tools:context=".MainActivity"
-		android:id="@+id/main">
+		tools:context=".MainActivity">
 
 	<LinearLayout
 			android:layout_gravity="fill"
 			android:layout_marginTop="64dp"
-			android:orientation="horizontal">
+			android:orientation="vertical">
 
-		<ImageView
-				android:id="@+id/send_icon"
-				android:layout_width="40dp"
-				android:layout_height="64dp"
-				android:gravity="center_horizontal"
-				android:paddingVertical="12dp"
-				android:paddingHorizontal="4dp"
+		<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="horizontal">
 
-				android:scaleType="fitCenter"
-				android:src="@drawable/search_icon" />
+			<ImageView
+					android:id="@+id/send_icon"
+					android:layout_width="40dp"
+					android:layout_height="64dp"
+					android:gravity="center_horizontal"
+					android:paddingHorizontal="4dp"
+					android:paddingVertical="12dp"
 
-		<com.google.android.material.textfield.TextInputEditText
-				android:id="@+id/app_search"
+					android:scaleType="fitCenter"
+					android:src="@drawable/search_icon" />
+
+			<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/app_search"
+					android:layout_width="match_parent"
+					android:layout_height="64dp"
+					android:background="@null"
+					android:focusedByDefault="true"
+					android:gravity="center_vertical"
+					android:maxLines="1"
+					android:singleLine="true" />
+		</LinearLayout>
+
+		<LinearLayout
+				android:orientation="horizontal"
+				android:id="@+id/recent_apps"
 				android:layout_width="match_parent"
 				android:layout_height="64dp"
-				android:background="@null"
-				android:focusedByDefault="true"
-				android:gravity="center_vertical"
-				android:maxLines="1"
-				android:singleLine="true" />
+				android:columnWidth="100dp"
+				android:numColumns="auto_fit"
+				android:verticalSpacing="8dp"
+				android:gravity="center_horizontal"
+				android:stretchMode="spacingWidthUniform" />
 	</LinearLayout>
+
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 			android:id="@+id/constraint"
