--- a/NiceAppSearch/app/src/main/res/values/transparent.xml
+++ b/NiceAppSearch/app/src/main/res/values/transparent.xml
@@ -12,5 +12,6 @@
 		<item name="android:activityCloseEnterAnimation">@android:anim/fade_out</item>
 		<item name="android:activityCloseExitAnimation">@android:anim/fade_in</item>
 
+		<item name="colorSecondary">#D8D8D8</item>
 	</style>
 </resources>
